<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#000"
        android:text="@string/information"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/t1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:layout_marginTop="16dp"
        android:id="@+id/et1"
        android:hint="@string/enter_your_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et1"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_your_age"
        android:id="@+id/et2"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et2"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_your_phone_no"
        android:id="@+id/et3"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et3"
        android:id="@+id/et4"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_your_city"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et4"
        android:text="@string/save"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"
        android:id="@+id/b1"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b1"
        android:text="@string/show"
        android:layout_marginTop="16dp"
        android:textColor="#FFF"
        android:id="@+id/b2"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"/>




</RelativeLayout>